Updated docs md